--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,13 +32,13 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+             sudo apt-get update
+             sudo apt-get upgrade -y
              cd
              mkdir bin
              cd bin
              curl http://commondatastorage.googleapis.com/git-repo-downloads/repo > ~/bin/repo 
              chmod a+x ~/bin/repo
-             cd
-             sudo apt-get install bison build-essential curl ccache flex lib32ncurses5-dev lib32z1-dev libesd0-dev libncurses5-dev libsdl1.2-dev libxml2 libxml2-utils lzop pngcrush schedtool squashfs-tools xsltproc zip zlib1g-dev git-core make phablet-tools gperf openjdk-8-jdk -y
              cd
              cd bin
              git clone https://github.com/akhilnarang/scripts.git build
