--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,5 +34,4 @@ jobs:
         run: |
            ls
            df -h
-           sudo apt install vnc4server
-           vncserver
+           gcloud compute
