--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,14 +24,18 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: actions/checkout@latest
+      - uses: geertvdc/setup-hub@master
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo how re yu
+        
+      - name: test
+        run: hub --version
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
            ls
            df -h
-           gcloud auth login
